Stop Flickering

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,3 +29,8 @@ body {
 .__b {
   border: solid thin blue;
 }
+.stop-flickering {
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+}
